--- a/RotaCar_Rental/Views/_ViewImports.cshtml
+++ b/RotaCar_Rental/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using RotaCar_Rental
 @using RotaCar_Rental.Models
 @using RotaCar_Rental.Utility
+@using Microsoft.AspNetCore.Identity
+@using RotaCar_Rental.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
