--- a/RotaCar_Rental/Areas/Admin/Views/CarCrud/Edit.cshtml
+++ b/RotaCar_Rental/Areas/Admin/Views/CarCrud/Edit.cshtml
@@ -1,4 +1,159 @@
-﻿@model Car
+﻿@model CarEditVM
+
+
+<div class="container">
+    <div class="card-header bg-secondary bg-gradient ml-0 py-3">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2 class="text-white">@(Model.Car.Id != 0 ? "Update" : "Create") Car</h2>
+            </div>
+        </div>
+    </div>
+    <div class="card-body p-4">
+        <form method="post" class="row" enctype="multipart/form-data">
+            <input asp-for="Car.Id" hidden />
+            <input asp-for="Car.location.Id" hidden />
+   
+            <div class="row">
+                <div class="col-8">
+                    <div class="border p-3">
+                     
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Car.Model" class="form-control border-0 shadow" />
+                            <label asp-for="Car.Model" class="ms-2"></label>
+                            <span asp-validation-for="Car.Model" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Car.Fuel" class="form-control border-0 shadow" />
+                            <label asp-for="Car.Fuel" class="ms-2"></label>
+                            <span asp-validation-for="Car.Fuel" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Car.Make" class="form-control border-0 shadow" />
+                            <label asp-for="Car.Make" class="ms-2"></label>
+                            <span asp-validation-for="Car.Make" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Car.Status" class="form-control border-0 shadow" />
+                            <label asp-for="Car.Status" class="ms-2"></label>
+                            <span asp-validation-for="Car.Status" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Car.RentalRateDaily" class="form-control border-0 shadow" />
+                            <label asp-for="Car.RentalRateDaily" class="ms-2"></label>
+                            <span asp-validation-for="Car.RentalRateDaily" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Car.RentalRateWeekly" class="form-control border-0 shadow" />
+                            <label asp-for="Car.RentalRateWeekly" class="ms-2"></label>
+                            <span asp-validation-for="Car.RentalRateWeekly" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Car.Mileage" class="form-control border-0 shadow" />
+                            <label asp-for="Car.Mileage" class="ms-2"></label>
+                            <span asp-validation-for="Car.Mileage" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Car.Seats" class="form-control border-0 shadow" />
+                            <label asp-for="Car.Seats" class="ms-2"></label>
+                            <span asp-validation-for="Car.Seats" class="text-danger"></span>
+                        </div>
+
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Car.Transmission" class="form-control border-0 shadow" />
+                            <label asp-for="Car.Transmission" class="ms-2"></label>
+                            <span asp-validation-for="Car.Transmission" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Car.LicensePlate" class="form-control border-0 shadow" />
+                            <label asp-for="Car.LicensePlate" class="ms-2"></label>
+                            <span asp-validation-for="Car.LicensePlate" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Car.Type" class="form-control border-0 shadow" />
+                            <label asp-for="Car.Type" class="ms-2"></label>
+                            <span asp-validation-for="Car.Type" class="text-danger"></span>
+                        <div/>
+
+                        <div class="form-floating py-2 col-12">
+                                <input asp-for="Car.Year" class="form-control border-0 shadow" />
+                                <label asp-for="Car.Year" class="ms-2"></label>
+                                <span asp-validation-for="Car.Year" class="text-danger"></span>
+                       </div>
+
+                     @*        <div class="form-floating py-2 col-12">
+                                <select asp-for="LocationID" asp-items="@Model.CategoryList" class="form-select border-0 shadow">
+                                    <option disabled selected>--select Category--</option>
+
+                                </select>
+                                <label asp-for="LocationID" class="ms-2"></label>
+                                <span asp-validation-for="LocationID" class="text-danger"></span>
+                            </div> *@
+                       </div>
+
+
+
+                      
+                
+
+                        <div class="row pt-2">
+                            <div class="col-6 col-md-3">
+                                @if (Model.Car.Id != 0)
+                                {
+                                    <button type="submit" class="btn btn-primary form-control">Update</button>
+                                }
+                                else
+                                {
+                                    <button type="submit" class="btn btn-primary form-control">Create</button>
+
+
+                                }
+                            </div>
+                            <div class="col-6 col-md-3">
+                                <a asp-controller="CarCrud" asp-action="Index" class="btn btn-outline-primary border  form-control">
+                                    Back to List
+                                </a>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+            
+            @* <div class="col-2">
+                @if (Model.attribute.Images != null)
+                {
+                    foreach (var image in Model.attribute.Images)
+                    {
+                        <div class="border p-1 m-2 text-center">
+                            <img src="@image.Image_url" width="100%"
+                                 style="border-radius:5px; border:1px solid #bbb9b9" />
+                            <a asp-action="DeleteImage" class="btn btn-danger" asp-route-imageId="@image.Id">
+                                <i class="bi bi-trash-fill"></i> Delete
+                            </a>
+                        </div>
+                    }
+                }
+
+            </div> *@
+
+
+        </form>
+    </div>
+</div>
+@section Scripts {
+  
+
+    @{
+
+        <partial name="_ValidationScriptsPartial" />
+    }
+
+}
+
+
+@* @model Car
 
 
 <div class="container">
@@ -75,4 +230,4 @@
 <div>
     <a asp-controller="CarCrud" asp-action="Index">Back to list</a>
     </div>
-</div>
+</div> *@
