--- a/RotaCar_Rental/Areas/Admin/Views/Location/Index.cshtml
+++ b/RotaCar_Rental/Areas/Admin/Views/Location/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Car>
+﻿@model IEnumerable<Location>
 
 
 <!-- partial -->
@@ -8,12 +8,12 @@
             <div class="row pt-4 pb-3">
                 <div class="col-6">
                     <h2 class="text-primary">
-                        Car List
+                        Location List
                     </h2>
                 </div>
                 <div class="col-6 text-end">
-                    <a asp-controller="CarCrud" asp-action="Edit" class="btn btn-primary">
-                        <i class="bi bi-plus-circle">Insert New Car</i>
+                    <a asp-controller="Location" asp-action="Edit" class="btn btn-primary">
+                        <i class="bi bi-plus-circle">Insert New Location</i>
                     </a>
                 </div>
             </div>
@@ -21,27 +21,21 @@
             <div class="col-lg-12 grid-margin stretch-card">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title">Basic Table</h4>
                         <p class="card-description">
-                            Cars <code>.table</code>
+                            Location <code>.table</code>
                         </p>
                         <div class="table-responsive">
-                            <table id="cartblData" class="table table-striped">
+                            <table id="locationtblData" class="table table-striped">
                                 <thead>
                                     <tr>
-                                        <th>Make</th>
-                                        <th>Model</th>
-                                        <th>Year</th>
-                                        <th>Mileage</th>
-                                        <th>Seats</th>
-                                        <th>Type</th>
-                                        <th>Fuel</th>
-                                        <th>Transmission</th>
-                                        <th>LicensePlate</th>
-                                        <th>LocationID</th>
-                                        <th>RentalRateDaily</th>
-                                        <th>RentalRateWeekly</th>
-                                        <th>Status</th>
+                                        <th>Name</th>
+                                        <th>Street</th>
+                                        <th>City</th>
+                                        <th>State</th>
+                                        <th>Zip</th>
+                                        <th>Phone</th>
+                                        <th>AvailableCar</th>
+                                   
                                     </tr>
                                 </thead>
                             
@@ -52,15 +46,38 @@
             </div>
 
 
-
+            <div id="map" style="width:100%;height:400px" ></div>
         </div>
+        
     </div>
 </div>
+
 @section Scripts {
-    <script src="~/js/Car.js"></script>
+    <script src="~/js/Location.js"></script>
+    <script src="~/lib/leaflet/leaflet.js"></script>
+    <script src="~/lib/leaflet/leaflet.min.js"></script>
 
+    @{
+
+        <partial name="_ValidationScriptsPartial" />
+    }
+    <script>
+        var map = L.map('map').setView([38.67483900304286, 39.22198798978766], 12);
+
+        L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+        }).addTo(map);
+        var jsModel = @Html.Raw(Json.Serialize(Model));
+        console.log(jsModel);
+        for (i in jsModel) {
+            item = jsModel[i]
+            L.marker([item.lat, item.long]).addTo(map)
+                .binPopup(item.name + '<br>' + item.zip)
+                .openPopup();
+
+        }
+    </script>
 }
-
 
 @* @model IEnumerable<Car>
 
